tests/baselines/reference/duplicateLabel2.errors.txt
tests/cases/compiler/duplicateLabel2.ts(3,3): error TS1114: Duplicate label 'target'.


==== tests/cases/compiler/duplicateLabel2.ts (1 errors) ====
    target:
    while (true) {
      target:
      ~~~~~~
!!! error TS1114: Duplicate label 'target'.
      while (true) {
      }
    }